--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
     <!-- Appointment Section -->
     <section class="py-16 relative">
         <div class="absolute inset-0">
-            <img src="./images/make-an-appointment.jpg" alt="Family together" class="w-full h-full object-cover">
+            <img src="images/make-an-appointment.jpg" alt="Family together" class="w-full h-full object-cover">
         </div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="max-w-lg">
-                <p class="text-blue-500 mb-2">Contact Us</p>
-                <h2 class="text-4xl font-bold text-white mb-8">Make an Appointment</h2>
+                <p class="text-black-500 mb-2">Contact Us</p>
+                <h2 class="text-4xl font-bold text-black mb-8">Make an Appointment</h2>
                 <form class="space-y-4">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <input type="text" placeholder="Full Name *" class="w-full p-3 bg-white bg-opacity-20 text-white placeholder-white border border-white rounded" required>
